ya está casi casi la población inicial

--- a/Instancias-20201205/.vscode/launch.json
+++ b/Instancias-20201205/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "g++ - Compilar y depurar el archivo activo",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
-            "stopAtEntry": false,
+            "program": "${workspaceFolder}/a.out",
+            "args": ["${workspaceFolder}/a36.txt"],
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
