falta terminar el readme

--- a/Archivos/Makefile
+++ b/Archivos/Makefile
@@ -3,11 +3,12 @@ CC = g++
 
 # flags
 
+CFLAGS = -g 
 main: main.o camion.o mcpwb.o 
-	g++ main.o camion.o mcpwb.o -o MCPwB
+	$(CC) $(CFLAGS) main.o camion.o mcpwb.o -o MCPwB
 	
 main.o: main.cpp 
-	g++ -c main.cpp
+	$(CC) $(CFLAGS) -c main.cpp
 
 camion.o: camion.h
 
